--- a/SpringBoot/Day06-Ktra/src/main/resources/templates/index.html
+++ b/SpringBoot/Day06-Ktra/src/main/resources/templates/index.html
@@ -16,36 +16,37 @@
     <title>Sản Phẩm</title>
 </head>
 <body>
-    <div class="header">
-        <h1>All Product</h1>
-    </div>
-    <div class="container">
-        <div class="search">
-            <input type="text" id="searchInput" placeholder="Search products...">
-            <button onclick="searchProducts()">Search</button>
-        </div>
-
-        <div class="product-grid" >
-            <div th:each="product : ${getAll}" class="product">
-                <a th:href="'/product/' + ${product.id}">
-                    <img style="height: 200px" th:src="${product.thumbnail}" alt="Product Image"/>
-                    <h2 th:text="${product.name}"></h2>
-                    <p class="price">Price: <span  th:text="${product.price}"></span> $</p>
-                    <p class="rating">Rating:
-                        <span th:text="${product.rating}"></span>
-                        <span class="start"><i class="fa-solid fa-star"></i></span>
-                    </p>
-                    <p class="discountPrice">Discounted Price: <span th:text="${product.price - product.priceDiscount}"></span> $</p>
-                </a>
-            </div>
-        </div>
-        <p th:if="${getAll.isEmpty()}" id="message">Không tìm thấy sản phẩm</p>
-        <div class="back">
-            <button onclick="goToHomePage()">Back to Home</button>
-        </div>
+<div class="header">
+    <h1>All Product</h1>
+</div>
+<div class="container">
+    <div class="search">
+        <input type="text" id="searchInput" placeholder="Search products...">
+        <button onclick="searchProducts()">Search</button>
     </div>
 
+    <div class="product-grid">
+        <div th:each="product : ${getAll}" class="product">
+            <a th:href="'/product/' + ${product.id}">
+                <img style="height: 200px" th:src="${product.thumbnail}" alt="Product Image"/>
+                <h2 th:text="${product.name}"></h2>
+                <p class="price">Price: <span th:text="${product.price}"></span> $</p>
+                <p class="rating">Rating:
+                    <span th:text="${product.rating}"></span>
+                    <span class="start"><i class="fa-solid fa-star"></i></span>
+                </p>
+                <p class="discountPrice">Discounted Price: <span
+                        th:text="${product.price - product.priceDiscount}"></span> $</p>
+            </a>
+        </div>
+    </div>
+    <p th:if="${getAll.isEmpty()}" id="message">Không tìm thấy sản phẩm</p>
+    <div class="back">
+        <button onclick="goToHomePage()">Back to Home</button>
+    </div>
+</div>
 
-    <script th:src="@{/js/main.js}"></script>
+
+<script th:src="@{/js/main.js}"></script>
 </body>
 </html>
