--- a/javascript/day-09-SP/css/style.css
+++ b/javascript/day-09-SP/css/style.css
@@ -30,7 +30,7 @@ a {
 }
 
 .movie-poster img {
-    object-fit: fill;
+    object-fit: cover;
     transition: all 0.3s;
 }
 
@@ -42,16 +42,66 @@ a {
     height: 400px;
 }
 
+.blog-time-index {
+    font-size: 12px;
+}
+
+.title-blog-index {
+    display: inline-block;
+    color: white;
+}
+
+.title-blog-index:hover  {
+    color: #D98A5E;
+}
+
+.click-blog {
+    font-size: 14px;
+    color: #D98A5E;
+}
+
+.click-blog:hover {
+    opacity: 0.8;
+}
+
 .movie-infor-poster img {
-    object-fit: fill;
+    object-fit: cover;
 }
 
 .movie-infor p {
+    color: #6c757d;
+}
+
+.movie-infor a {
     color: white;
+}
+
+.movie-infor a:hover {
+    color: #FF9727;
 }
 
 .movie-infor .star {
     color: #FF9727;
+}
+
+.blog-thumbnail {
+    height: 200px;
+}
+
+.blog-thumbnail img {
+    object-fit: fill;
+}
+
+.blog-time {
+    font-size: 14px;
+}
+
+.blog-introduce {
+    color: white;
+}
+
+.blog-item:hover  .blog-introduce{
+    color: #3f3f46;
 }
 
 .list-episode {
@@ -60,15 +110,10 @@ a {
 }
 
 .review .avatar {
-    height: 35px;
-    width: 35px;
-    text-align: center;
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #3f3f46;
-    font-weight: 600;
+    height: 30px;
+    width: 30px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .review .review-name {
@@ -91,7 +136,64 @@ a {
     color: #d4d4d8;
 }
 
-.img-comment {
-    height: 48px;
-    width: 48px;
+.comment-blog .avatar-cmt{
+    height: 35px;
+    width: 35px;
+    object-fit: cover;
 }
+
+.coment-blog-name {
+    font-weight: 600;
+    font-size: 14px;
+    color: #d4d4d8;
+}
+
+.coment-blog-time {
+    font-size: 12px;
+    color: #a1a1a1;
+}
+
+.user-comment-blog {
+    background-color: #27272A;
+}
+
+.comment-blog-text {
+    font-size: 14px;
+    color: #d4d4d8;
+}
+
+.rating1 {
+    font-size: 24px;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.star1 {
+    display: inline-block;
+}
+
+.star1:hover,
+.star1.active {
+    color: #EDBB0E;
+}
+
+.card-login {
+    background-color: #27272A;
+    padding: 0 40px;
+    border-radius: 10px;
+    height: 400px;
+    width: 450px;
+}
+
+.card-register {
+    background-color: #27272A;
+    padding: 0 40px;
+    border-radius: 10px;
+    height: 570px;
+    width: 450px;
+}
+
+ .dropdown-item:hover {
+    background-color: #d8dcdf;
+}
+
